updated index for html chars

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <li><a href="#robin" title="">ROBIN</a></li>
           <li><a href="#jasper" title="">JASPER</a></li>
           <li><a href="#sophia" title="">SOPHIA</a></li>
-          <li><a href="#fur" title="">FUR & FINS</a></li>
+          <li><a href="#fur" title="">FUR &amp; FINS</a></li>
         </ul>
       </div>
 
@@ -130,7 +130,7 @@
             <br><br>
           </p>
 
-          <a id="fur"><h1>fur & fins</h1></a>
+          <a id="fur"><h1>fur &amp; fins</h1></a>
           <div class="crop"><img class="img5" src="images/stampy_toes.gif" alt="cat pedicure"> 
           </div>
           <div class="crop"><img class="img6" src="images/IMG_9766.jpeg" alt="alian dog legs">  <br>
@@ -150,7 +150,7 @@
         <div style="clear: both;"></div>
 
       </div>
-      <div id="footer"> <span >Copyright © 2017 <a href="mailto:robin.avila88@gmail.com?Subject=Hello%20again" target="_top">Robin Avila</a> | All Rights Reserved  </span> 
+      <div id="footer"> <span >Copyright &copy; 2017 <a href="mailto:robin.avila88@gmail.com?Subject=Hello%20again" target="_top">Robin Avila</a> | All Rights Reserved  </span> 
       </div>
     </div>
   </body>
